44-Proyecto terminado con comentarios

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "livePreview.defaultPreviewPath": "/28-Modulos/index.html"
+    "livePreview.defaultPreviewPath": "/28-Modulos/index.html",
+    "editor.guides.bracketPairs": true
 }
